WIP
Cleanup and start of refactor to remove ContinuePaginatedPlan.

Signed-off-by: MaxKsyunz <maxk@bitquilltech.com>